<resources>
    <string name="app_name">A Minha Saúde</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">A Minha Saúde</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Definições</string>
    <string name="agenda">Agenda:</string>
    <string name="Nao_existem_dados">De momento não existem dados na sua agenda!</string>
    <string name="Sair">Sair</string>
    <string name="tratamentos">Tratamentos</string>
    <string name="send">Acerca da Aplicação</string>
    <string name="an_lises">Análises</string>
    <string name="sobre">Sobre</string>
    <string name="agendas">Agenda</string>
    <string name="sair">Sair</string>
    <string name="title_activity_tratamentos">Tratamentos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="novo_tratamento">Novo Tratamento</string>
    <string name="ver_tratamentos">Ver Tratamentos</string>
    <string name="title_activity_novo__tratamento">Novo Tratamento</string>
    <string name="doen_a">Doença:</string>
    <string name="medicamento">Medicamento:</string>
    <string name="hora_de_come_o">Hora de Começo:</string>
    <string name="horas_a_tomar">Horas a tomar:</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="message_required">Campo Obrigatório!</string>
    <string name="title_activity_ver_tratamentos">Ver Tratamentos</string>
    <string name="de_momento_n_o_existem_tratamentos">De momento não existem tratamentos!</string>
    <string name="editar_tratamento">Editar Tratamento</string>
    <string name="eliminar_tratamento">Eliminar Tratamento</string>
    <string name="title_activity_editar_tratamento">Editar Tratamento</string>
    <string name="title_activity_eliminar_tratamento">Eliminar Tratamento</string>
    <string name="Eliminar">Eliminado Com Sucesso</string>
    <string name="Cancelar">Cancelado</string>
    <string name="Guardar">Guardado com sucesso</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_consultas_medicas">Consultas Médicas</string>
    <string name="nova_consulta">Nova Consulta</string>
    <string name="ver_consultas">Ver Consultas</string>
    <string name="title_activity_novo_tratamento">Novo Tratamento</string>
    <string name="title_activity_nova__consulta">Nova Consulta</string>
    <string name="hora_da_consulta">Hora da Consulta:</string>
    <string name="local_da_consulta">Local Da Consulta:</string>
    <string name="motivo_da_consulta">Motivo da Consulta</string>
    <string name="m_dico_opcional">Médico(Opcional):</string>
    <string name="title_activity_ver_consultas">Ver Consultas</string>
    <string name="editar_consulta">Editar Consulta</string>
    <string name="eliminar_consulta">Eliminar Consulta</string>
    <string name="title_activity_editar_consulta">Editar Consulta</string>
    <string name="title_activity_eliminar_consulta">Eliminar Consulta</string>
    <string name="title_activity_analises">Análises</string>
    <string name="title_activity_novos_resultados_analises">Novos Resultados Análises</string>
    <string name="data_das_an_lises">Data Das Análises</string>
    <string name="colestrol">Colestrol</string>
    <string name="a_cares">Açúcares</string>
    <string name="creatina">Creatina</string>
    <string name="cido_urico">Ácido Urico</string>
    <string name="ureia">Ureia</string>
    <string name="title_activity_ver_analises">Ver Análises</string>
    <string name="editar_an_lises">Editar Análises</string>
    <string name="eliminar_an_lises">Eliminar Análises</string>
    <string name="title_activity_eliminar_analises">Eliminar Análises</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="aplica_o_desenvolvida_p_r">Aplicação desenvolvida pôr:</string>
    <string name="telmo_salvado">Telmo Salvado</string>
    <string name="_1700712">1700712</string>
    <string name="a_minha_sa_de">A minha Saúde</string>
    <string name="consultas_m_dicas">Consultas Médicas</string>
    <string name="dia_da_consulta">Dia da Consulta:</string>
    <string name="dias_a_tomar">Dias a tomar:</string>
    <string name="programa_o_avan_ada_2018_2019">Programação Avançada 2018/2019</string>
    <string name="title_activity_editar_analises">Editar Análises</string>
    <string name="Validar_data">Formato DD/MM/AAAA</string>
    <string name="validar_hora">Formato HH:MM</string>
    <string name="medicamento_bruffen">Medicamento: Bruffen</string>
    <string name="hora_de_come_o_15_45">Hora De Começo: 15:45</string>
    <string name="hora_a_tomar_6h">Hora a Tomar: 6h</string>
    <string name="dias_5">Dias: 5</string>
    <string name="doen_a_gripe">Doença: Gripe</string>
    <string name="action_eliminar">action_eliminar</string>
    <string name="action_inserir">action_inserir</string>
    <string name="action_alterar">action_alterar</string>
    <string name="erro_guardar_tratamento">Erro: Não foi possível guardar </string>
    <string name="Horas_invalidas">Hora Inválida</string>
    <string name="Data_invalida">Data Inválida</string>
</resources>
