<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Agenda"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="Agenda" />
        <item
            android:id="@+id/nav_Tratamentos"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/tratamentos" />
        <item
            android:id="@+id/nav_Consultas"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/consultas_m_dicas" />
        <item
            android:id="@+id/nav_Analises"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/an_lises" />
    </group>

    <item android:title="@string/sobre">
        <menu>
            <item
                android:id="@+id/nav_acerca"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
