<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context ="pt.ipg.aminhasaude.VerConsultas">

    <item
        android:id="@+id/action_inserir"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_inserir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_alterar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_eliminar"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>