<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EliminarAnalises"
    tools:showIn="@layout/activity_eliminar_analises">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_das_an_lises" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_cares" />

            <EditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colestrol" />

            <EditText
                android:id="@+id/editText13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creatina" />

            <EditText
                android:id="@+id/editText14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cido_urico" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ureia" />

            <EditText
                android:id="@+id/editText16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorEliminar"
                android:onClick="Eliminar"
                android:text="@string/eliminar" />

            <Button
                android:id="@+id/button28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCancelar"
                android:onClick="Cancelar"
                android:text="@string/cancelar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>