<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditarConsulta"
    tools:showIn="@layout/activity_editar_consulta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dia_da_consulta"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora_da_consulta"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local_da_consulta"
                    android:inputType="textAutoCorrect|text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextMotivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/motivo_da_consulta"
                    android:inputType="textAutoCorrect" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m_dico_opcional"
                    android:inputType="textAutoCorrect" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorValidar"
                android:onClick="Guardar"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCancelar"
                android:onClick="Cancelar"
                android:text="@string/cancelar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>