<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditarTratamento"
    tools:showIn="@layout/activity_editar_tratamento">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextDoenca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doen_a"
                    android:inputType="textAutoCorrect|text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextMedicamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicamento"
                    android:inputType="textAutoCorrect|text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextHorasAtomar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/horas_a_tomar"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextDias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dias_a_tomar"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextHoraComeco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora_de_come_o"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorValidar"
                android:onClick="Guardar"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCancelar"
                android:onClick="Cancelar"
                android:text="@string/cancelar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>